--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section>Hello World!</section>
+				<section>
+					<img src="https://vetstreet-brightspot.s3.amazonaws.com/ff/3691e0a75511e0a0d50050568d634f/file/Great-Pyrenees-3-645mk062411.jpg">
+				</section>
 			</div>
 		</div>
 		<script src="js/reveal.js"></script>
