--- a/index.html
+++ b/index.html
@@ -37,6 +37,24 @@
 		</nav>
 		<div class="reveal">		
 			<div class="slides">
+				<section>
+  		 		  <div class="container">
+				  <div class="row">
+				    <div class="col-sm-4">
+				      <h1 style="font-size:100%;">Introduction</h1>
+				      <p style="font-size:30%; text-align:left;">In the year of 2017-2018, nearly 12,000 people have been hospitalized with confirmed cases of flu, an increase of 3,000 in just one week, according to the Centers for Disease Control and Prevention (CDC). If you're not sick, there's a good chance some of your friends, family members, or colleagues are.
+				  </p>
+				  <p style="font-size:30%; text-align:left;"> CDC monitors certain key flu indicators (for example, outpatient visits of influenza-like illness (ILI), the results of laboratory testing and reports of flu hospitalizations and deaths). This season, ILI went above baseline in late November and remained elevated through February 2018. 
+				  </p>
+				    </div>
+				    <div class="col-sm-8">
+				    <iframe src="https://public.tableau.com/views/Slide_1a/Slide1?:showVizHome=no&:embed=true&:toolbar=no"
+				width="870" height="360"></iframe>  
+				    </div>
+				  </div>
+				</div>
+				</section>
+
 				<section>Hello World!</section>
 				<section>
 					<img src="https://vetstreet-brightspot.s3.amazonaws.com/ff/3691e0a75511e0a0d50050568d634f/file/Great-Pyrenees-3-645mk062411.jpg">
