--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
 			<a class="nav-link" href="#">Link</a>
 		        </li>
 		        <li class="nav-item dropdown">
-			<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-			  Datasets
-			</a>
-			<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-			  <a class="dropdown-item" href="#">Dataset 1</a>
-			  <a class="dropdown-item" href="#">Dataset 2</a>
-			  <a class="dropdown-item" href="#">Dataset 3</a>
-			</div>
-		      </li>
+        		<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          		Data
+        		</a>
+        		<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          		<a class="dropdown-item" href="#">Dataset 1</a>
+          		<a class="dropdown-item" href="#">Dataset 2</a>
+               		<a class="dropdown-item" href="#">Dataset 3</a>
+        		</div>
+      			</li>
 		      </ul>
 		     </div>
 		</nav>
