--- a/index.html
+++ b/index.html
@@ -34,26 +34,34 @@
 		
 		<div class="reveal">		
 			<div class="slides">
-				<section>
+				<section id="introduction">
 				  <h1 style="font-size:95%;">Introduction</h1>
   		 		  <div class="container">
 				  <div class="row">
 				    <div class="col-sm-4">
- 				      <p style="font-size:30%; text-align:left;">In the year of 2017-2018, nearly 12,000 people have been hospitalized with confirmed cases of flu, an increase of 3,000 in just one week, according to the Centers for Disease Control and Prevention (CDC). If you're not sick, there's a good chance some of your friends, family members, or colleagues are.
+ 				      <p style="font-size:30%; text-align:center;">In the year of 2017-2018, nearly 12,000 people have been hospitalized with confirmed cases of flu, an increase of 3,000 in just one week, according to the Centers for Disease Control and Prevention (CDC). If you're not sick, there's a good chance some of your friends, family members, or colleagues are.
   				      </p>
-  				      <p style="font-size:30%; text-align:left;"> CDC monitors certain key flu indicators (for example, outpatient visits of influenza-like illness (ILI), the results of laboratory testing and reports of flu hospitalizations and deaths). This season, ILI went above baseline in late November and remained elevated through February 2018. 
+  				      <p style="font-size:30%; text-align:center;"> CDC monitors certain key flu indicators (for example, outpatient visits of influenza-like illness (ILI), the results of laboratory testing and reports of flu hospitalizations and deaths). This season, ILI went above baseline in late November and remained elevated through February 2018. 
   				      </p>
 
 				    </div>
 				    <div class="col-sm-8">
-				    <iframe src="https://public.tableau.com/views/Slide_1a/Slide1?:showVizHome=no&:embed=true&:toolbar=no"
+				    <iframe src="https://public.tableau.com/profile/shan.he#!/vizhome/Slide_1/Slide1?:showVizHome=no&:embed=true&:toolbar=no"
 				width="870" height="360"></iframe>  
 				    </div>
 				  </div>
 				</div>
 				</section>
 
-				<section>Hello World!</section>
+				<section id="geographic">
+				<h1 style="font-size:95%;">Geographic Pattern</h1>
+				<p>The CDC stated that as of January, every part of the continental U.S. showed “widespread” flu activity in this flu season. Comparing 2017-18 to the past, although the geographical pattern seems similar, the magnitude of flu spread is much higher.
+				</p>
+				<div>
+				    <iframe src="https://public.tableau.com/profile/shan.he#!/vizhome/Slide_2/Slide1?:showVizHome=no&:embed=true&:toolbar=no"
+				width="870" height="360"></iframe>  
+				    </div>
+				</section>
 				<section>
 					<img src="https://vetstreet-brightspot.s3.amazonaws.com/ff/3691e0a75511e0a0d50050568d634f/file/Great-Pyrenees-3-645mk062411.jpg">
 				</section>
