--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 				<p>The CDC stated that as of January, every part of the continental U.S. showed “widespread” flu activity in this flu season. Comparing 2017-18 to the past, although the geographical pattern seems similar, the magnitude of flu spread is much higher.
 				</p>
 				<div>
-				    <iframe src="https://public.tableau.com/profile/shan.he#!/vizhome/Slide_2/Slide1?:showVizHome=no&:embed=true&:toolbar=no"
+				    <iframe src="https://public.tableau.com/views/Slide_2small/Slide2?:showVizHome=no&:embed=true&:toolbar=no"
 				width="870" height="360"></iframe>  
 				    </div>
 				</section>
