--- a/index.html
+++ b/index.html
@@ -104,6 +104,23 @@ don’t see anything too special about 2017-18 either.
 				<h1>So Why is 2017-2018 Season is Bad?</h1>
 				</section>
 				
+				<section id="strains">
+				  <div class="container">
+				  <div class="row">
+				    <div class="col-sm-4">
+ 				      <p style="font-size:30%; text-align:center;">There are four species of influenza viruses — A, B, C, and D — and seasonal flu is caused by
+influenza A and B. Every year, different strains of these viruses circulate. Although most look
+the same from the chart below...
+  				      </p>
+				    </div>
+				    <div class="col-sm-8">
+				    <iframe src="https://public.tableau.com/views/Slide_6a/Slide6?:showVizHome=no&:embed=true&:toolbar=no"
+				width="870" height="360"></iframe>  
+				    </div>
+				  </div>
+				</div>
+				</section>
+				
 			</div>
 		</div>
 		<script src="js/reveal.js"></script>
