--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
   				      </p>
   				      <p style="font-size:30%; text-align:center;"> CDC monitors certain key flu indicators (for example, outpatient visits of influenza-like illness (ILI), the results of laboratory testing and reports of flu hospitalizations and deaths). This season, ILI went above baseline in late November and remained elevated through February 2018. 
   				      </p>
-
 				    </div>
 				    <div class="col-sm-8">
 				    <iframe src="https://public.tableau.com/views/Slide_1a/Slide1?:showVizHome=no&:embed=true&:toolbar=no"
@@ -120,6 +119,28 @@ the same from the chart below...
 				  </div>
 				</div>
 				</section>
+				
+				<section id="cases">
+				  <h1 style="font-size:95%;">Flu Cases by Flu Strain - H3</h1>
+  		 		  <div class="container">
+				  <div class="row">
+				    <div class="col-sm-4">
+ 				    <p style="font-size:30%; text-align:center;">Among all the similarities, we seem to find our answer - the predominant strain this season is
+the nastiest, H3N2, which causes the worst outbreaks of the two influenza A viruses and two
+types of influenza B viruses that circulate among people. Seasons when H3N2 strain dominates
+are associated with more hospitalizations, more deaths and more illnesses. In general, flu
+vaccines tend to work better against influenza B and influenza A (H1N1) viruses and offer lower
+protection against influenza A (H3N2) viruses.
+				    </p>
+				    </div>
+				    <div class="col-sm-8">
+				    <iframe src="https://public.tableau.com/views/Slide_7small/Slide7?:showVizHome=no&:embed=true&:toolbar=no"
+				width="870" height="360"></iframe>  
+				    </div>
+				  </div>
+				</div>
+				</section>
+
 				
 			</div>
 		</div>
