--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@
         		</a>
         		<div class="dropdown-menu" aria-labelledby="navbarDropdown">
           		<a class="dropdown-item" href="#">Dataset 1</a>
+			<a class="dropdown-item" href="#">Dataset 2</a>
+        		</div>
+      			</li>
+			</li>
+		        <li class="nav-item dropdown">
+        		<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          		References
+        		</a>
+        		<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          		<a class="dropdown-item" href="#">Dataset 1</a>
           		<a class="dropdown-item" href="#">Dataset 2</a>
                		<a class="dropdown-item" href="#">Dataset 3</a>
         		</div>
