adding base styling

--- a/index.html
+++ b/index.html
@@ -6,51 +6,26 @@
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
 	</head>
 	<body>
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
- 			<a class="navbar-brand" href="#">Navbar</a>
-  			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    				<span class="navbar-toggler-icon"></span>
-  			</button>
-  			<div class="collapse navbar-collapse" id="navbarSupportedContent">
-    			<ul class="navbar-nav mr-auto">
-      			<li class="nav-item active">
-        		<a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-		        </li>
-		        <li class="nav-item">
-			<a class="nav-link" href="#">Link</a>
-		        </li>
-		        <li class="nav-item dropdown">
-        		<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          		Data
-        		</a>
-        		<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          		<a class="dropdown-item" href="#">Dataset 1</a>
-			<a class="dropdown-item" href="#">Dataset 2</a>
-        		</div>
-      			</li>
-			</li>
-		        <li class="nav-item dropdown">
-        		<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          		References
-        		</a>
-        		<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          		<a class="dropdown-item" href="#">Dataset 1</a>
-          		<a class="dropdown-item" href="#">Dataset 2</a>
-               		<a class="dropdown-item" href="#">Dataset 3</a>
-        		</div>
-      			</li>
-		      </ul>
-		     </div>
-		</nav>
+	<header>
+      <div class="header">
+        <span><a href="#" class="website-title">Visualizing Flu Epidemic</a></span>
+        <div class="jump-links">
+          <div class="link"><a href="#">Home</a></div>
+          <div class="link"><a href="#introduction">Introduction</a></div>
+          <div class="link"><a href="#states">Pattern</a></div>
+          <div class="link"><a href="#victims">References</a></div>
+        </div>
+      </div>
+    </header>
 		
 		<div class="reveal">		
 			<div class="slides">
 				
 				<section id="introduction">
-				  <h1 style="font-size:95%;">Introduction</h1>
   		 		  <div class="container">
 				  <div class="row">
 				    <div class="col-sm-4">
+				    	<h1 style="font-size:95%;">Introduction</h1>
  				      <p style="font-size:30%; text-align:center;">In the year of 2017-2018, nearly 12,000 people have been hospitalized with confirmed cases of flu, an increase of 3,000 in just one week, according to the Centers for Disease Control and Prevention (CDC). If you're not sick, there's a good chance some of your friends, family members, or colleagues are.
   				      </p>
   				      <p style="font-size:30%; text-align:center;"> CDC monitors certain key flu indicators (for example, outpatient visits of influenza-like illness (ILI), the results of laboratory testing and reports of flu hospitalizations and deaths). This season, ILI went above baseline in late November and remained elevated through February 2018. 
