updates to clean up html and styling

--- a/index.html
+++ b/index.html
@@ -25,51 +25,50 @@
   		 		  <div class="container">
 				  <div class="row">
 				    <div class="col-sm-4">
-				    	<h1 style="font-size:95%;">Introduction</h1>
- 				      <p style="font-size:30%; text-align:center;">In the year of 2017-2018, nearly 12,000 people have been hospitalized with confirmed cases of flu, an increase of 3,000 in just one week, according to the Centers for Disease Control and Prevention (CDC). If you're not sick, there's a good chance some of your friends, family members, or colleagues are.
+				    	<h1>Introduction</h1>
+ 				      <p>In the year of 2017-2018, nearly 12,000 people have been hospitalized with confirmed cases of flu, an increase of 3,000 in just one week, according to the Centers for Disease Control and Prevention (CDC). If you're not sick, there's a good chance some of your friends, family members, or colleagues are.
   				      </p>
-  				      <p style="font-size:30%; text-align:center;"> CDC monitors certain key flu indicators (for example, outpatient visits of influenza-like illness (ILI), the results of laboratory testing and reports of flu hospitalizations and deaths). This season, ILI went above baseline in late November and remained elevated through February 2018. 
+  				      <p> CDC monitors certain key flu indicators (for example, outpatient visits of influenza-like illness (ILI), the results of laboratory testing and reports of flu hospitalizations and deaths). This season, ILI went above baseline in late November and remained elevated through February 2018. 
   				      </p>
 				    </div>
 				    <div class="col-sm-8">
 				    <iframe src="https://public.tableau.com/views/Slide_1a/Slide1?:showVizHome=no&:embed=true&:toolbar=no"
-				width="870" height="360"></iframe>  
+					width="870" height="360"></iframe>  
 				    </div>
 				  </div>
-				</div>
+					</div>
 				</section>
 
 				<section id="geographic">
 					<div class="container">
 				  		<div class="row">
-				  			<div class="col-sm-6">
-								<h1 style="font-size:95%;">Geographic Pattern</h1>
-								<p>The CDC stated that as of January, every part of the continental U.S. showed “widespread” flu activity in this flu season. Comparing 2017-18 to the past, although the geographical pattern seems similar, the magnitude of flu spread is much higher.
+				  			<div class="col-sm-4">
+								<h1>Geographic Pattern</h1>
+								<p>The CDC stated that as of January, every part of the continental U.S. showed widespread flu activity in this flu season. Comparing 2017-18 to the past, although the geographical pattern seems similar, the magnitude of flu spread is much higher.
 								</p>
 							</div>
-							<div  class="col-sm-6">
-				    			<iframe src="https://public.tableau.com/views/Slide_2small/Slide2?:showVizHome=no&:embed=true&:toolbar=no" width="870" height="360"></iframe>  
+							<div  class="col-sm-8">
+				    			<iframe src="https://public.tableau.com/views/Slide_2small/Slide2?:showVizHome=no&:embed=true&:toolbar=no" width="1000" height="600"></iframe>  
 				    		</div>
 				    	</div>
 				    </div>
 				</section>
 				
 				<section id="transition">
-				<h1>So Why is 2017-2018 Season is Bad?</h1>
+					<h1>So Why is 2017-2018 Season is Bad?</h1>
 				</section>
 				
 				<section id="hospitalization">
 					<div class="container">
 				  		<div class="row">
-				  			<div class="col-sm-5">					
-				            	<h1 style="font-size:95%;">Hospitalized Patients by Age Group</h1>
-								<p>Overall hospitalizations are significantly higher than what officials have normally seen this timeof year since CDC began using this tracking system in 2010. Typically, flu epidemics quickly spread among young and elder patients due to their weaker immune system.
+				  			<div class="col-sm-4">					
+				            	<p>Overall hospitalizations are significantly higher than what officials have normally seen this timeof year since CDC began using this tracking system in 2010. Typically, flu epidemics quickly spread among young and elder patients due to their weaker immune system.
 								</p>
-								<p>Many suspect that 2017-18 epidemic’s severity is due to the age group that are being affected.Although we do see a high percentage of elderly patients, this is nothing new compared to thepast years.
+								<p>Many suspect that 2017-18 epidemic's severity is due to the age group that are being affected. Although we do see a high percentage of elderly patients, this is nothing new compared to thepast years.
 								</p>
 							</div>
-							<div  class="col-sm-7">							
-								<iframe src="https://public.tableau.com/views/Slide_4small/Slide4?:showVizHome=no&:embed=true&:toolbar=no" width="870" height="360"></iframe>  
+							<div  class="col-sm-8">							
+								<iframe src="https://public.tableau.com/views/Slide_4small/Slide4?:showVizHome=no&:embed=true&:toolbar=no" width="1700" height="500"></iframe>  
 							</div>
 				    	</div>
 				    </div>
@@ -81,11 +80,11 @@
 				  			<div class="col-sm-4">					
 								<p>People with chronic conditions like cardiovascular disease, metabolic disease, or asthma are typically affected the most. Catching a flu could exacerbate existing conditions, particularly among older adults, which can lead to complications and death.
 								</p>
-								<p>But again, looking at the proportion of the recorded underlying medical conditions by CDC, we don’t see anything too special about 2017-18 either.
+								<p>But again, looking at the proportion of the recorded underlying medical conditions by CDC, we don't see anything too special about 2017-18 either.
 								</p>	
 							</div>
 							<div  class="col-sm-8">									
-				    			<iframe src="https://public.tableau.com/views/Slide_5small/Slide5?:showVizHome=no&:embed=true&:toolbar=no" width="870" height="360"></iframe>  
+				    			<iframe src="https://public.tableau.com/views/Slide_5small/Slide5?:showVizHome=no&:embed=true&:toolbar=no" width="1200" height="500"></iframe>  
 				    		</div>
 				    	</div>
 				    </div>
@@ -99,7 +98,7 @@
 				  <div class="container">
 				  	<div class="row">
 				    	<div class="col-sm-4">
- 				      		<p style="font-size:30%; text-align:center;">There are four species of influenza viruses — A, B, C, and D — and seasonal flu is caused by influenza A and B. Every year, different strains of these viruses circulate. Although most look the same from the chart below...
+ 				      		<p>There are four species of influenza viruses — A, B, C, and D — and seasonal flu is caused by influenza A and B. Every year, different strains of these viruses circulate. Although most look the same from the chart below...
   				      		</p>
 				    	</div>
 				    	<div class="col-sm-8">
@@ -113,8 +112,8 @@
 				  	<div class="container">
 				  		<div class="row">
 				    		<div class="col-sm-4">
-				  				<h1 style="font-size:95%;">Flu Cases by Flu Strain - H3</h1>
- 				    			<p style="font-size:30%; text-align:center;">Among all the similarities, we seem to find our answer - the predominant strain this season is the nastiest, H3N2, which causes the worst outbreaks of the two influenza A viruses and two types of influenza B viruses that circulate among people. Seasons when H3N2 strain dominates are associated with more hospitalizations, more deaths and more illnesses. In general, flu vaccines tend to work better against influenza B and influenza A (H1N1) viruses and offer lower protection against influenza A (H3N2) viruses.
+				  				<h1>Flu Cases by Flu Strain - H3</h1>
+ 				    			<p>Among all the similarities, we seem to find our answer - the predominant strain this season is the nastiest, H3N2, which causes the worst outbreaks of the two influenza A viruses and two types of influenza B viruses that circulate among people. Seasons when H3N2 strain dominates are associated with more hospitalizations, more deaths and more illnesses. In general, flu vaccines tend to work better against influenza B and influenza A (H1N1) viruses and offer lower protection against influenza A (H3N2) viruses.
 				    			</p>
 				    		</div>
 				    		<div class="col-sm-8">
