more style updates

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
       <div class="header">
         <span><a href="#" class="website-title">Visualizing Flu Epidemic</a></span>
         <div class="jump-links">
-          <div class="link"><a href="#">Home</a></div>
-          <div class="link"><a href="#introduction">Introduction</a></div>
-          <div class="link"><a href="#geographic">Pattern</a></div>
-          <div class="link"><a href="#hospitalization">Hospitalization</a></div>
+           	<div class="link"><a href="#">Home</a></div>
+          	<div class="link"><a href="#introduction">Introduction</a></div>
+          	<div class="link"><a href="#geographic">Pattern</a></div>
+         	<div class="link"><a href="#hospitalization">Hospitalization</a></div>
         </div>
       </div>
     </header>
@@ -33,7 +33,7 @@
 				    </div>
 				    <div class="col-sm-8">
 				    <iframe src="https://public.tableau.com/views/Slide_1a/Slide1?:showVizHome=no&:embed=true&:toolbar=no"
-					width="870" height="360"></iframe>  
+					width="1000" height="450"></iframe>  
 				    </div>
 				  </div>
 					</div>
@@ -48,7 +48,7 @@
 								</p>
 							</div>
 							<div  class="col-sm-8">
-				    			<iframe src="https://public.tableau.com/views/Slide_2small/Slide2?:showVizHome=no&:embed=true&:toolbar=no" width="1000" height="600"></iframe>  
+				    			<iframe src="https://public.tableau.com/views/Slide_2small/Slide2?:showVizHome=no&:embed=true&:toolbar=no" width="1000" height="700"></iframe>  
 				    		</div>
 				    	</div>
 				    </div>
@@ -68,7 +68,7 @@
 								</p>
 							</div>
 							<div  class="col-sm-8">							
-								<iframe src="https://public.tableau.com/views/Slide_4small/Slide4?:showVizHome=no&:embed=true&:toolbar=no" width="1700" height="500"></iframe>  
+								<iframe src="https://public.tableau.com/views/Slide_4small/Slide4?:showVizHome=no&:embed=true&:toolbar=no" width="1000" height="500"></iframe>  
 							</div>
 				    	</div>
 				    </div>
@@ -84,7 +84,7 @@
 								</p>	
 							</div>
 							<div  class="col-sm-8">									
-				    			<iframe src="https://public.tableau.com/views/Slide_5small/Slide5?:showVizHome=no&:embed=true&:toolbar=no" width="1200" height="500"></iframe>  
+				    			<iframe src="https://public.tableau.com/views/Slide_5small/Slide5?:showVizHome=no&:embed=true&:toolbar=no" width="1200" height="650"></iframe>  
 				    		</div>
 				    	</div>
 				    </div>
@@ -98,11 +98,11 @@
 				  <div class="container">
 				  	<div class="row">
 				    	<div class="col-sm-4">
- 				      		<p>There are four species of influenza viruses — A, B, C, and D — and seasonal flu is caused by influenza A and B. Every year, different strains of these viruses circulate. Although most look the same from the chart below...
+ 				      		<p>There are four species of influenza viruses - A, B, C, and D - and seasonal flu is caused by influenza A and B. Every year, different strains of these viruses circulate. Although most look the same as denoted by the chart.
   				      		</p>
 				    	</div>
 				    	<div class="col-sm-8">
-				    		<iframe src="https://public.tableau.com/views/Slide_6a/Slide6?:showVizHome=no&:embed=true&:toolbar=no" width="870" height="360"></iframe>  
+				    		<iframe src="https://public.tableau.com/views/Slide_6a/Slide6?:showVizHome=no&:embed=true&:toolbar=no" width="870" height="600"></iframe>  
 				    	</div>
 				  	</div>
 				  </div>
@@ -112,12 +112,11 @@
 				  	<div class="container">
 				  		<div class="row">
 				    		<div class="col-sm-4">
-				  				<h1>Flu Cases by Flu Strain - H3</h1>
- 				    			<p>Among all the similarities, we seem to find our answer - the predominant strain this season is the nastiest, H3N2, which causes the worst outbreaks of the two influenza A viruses and two types of influenza B viruses that circulate among people. Seasons when H3N2 strain dominates are associated with more hospitalizations, more deaths and more illnesses. In general, flu vaccines tend to work better against influenza B and influenza A (H1N1) viruses and offer lower protection against influenza A (H3N2) viruses.
+				  				<p>Among all the similarities, we seem to find our answer - the predominant strain this season is the nastiest, H3N2, which causes the worst outbreaks of the two influenza A viruses and two types of influenza B viruses that circulate among people. Seasons when H3N2 strain dominates are associated with more hospitalizations, more deaths and more illnesses. In general, flu vaccines tend to work better against influenza B and influenza A (H1N1) viruses and offer lower protection against influenza A (H3N2) viruses.
 				    			</p>
 				    		</div>
 				    		<div class="col-sm-8">
-				    			<iframe src="https://public.tableau.com/views/Slide_7small/Slide7?:showVizHome=no&:embed=true&:toolbar=no" width="870" height="360"></iframe>  
+				    			<iframe src="https://public.tableau.com/views/Slide_7small/Slide7?:showVizHome=no&:embed=true&:toolbar=no" width="1000" height="500"></iframe>  
 				    		</div>
 				  		</div>
 					</div>
