updates the links

--- a/index.html
+++ b/index.html
@@ -10,10 +10,25 @@
       <div class="header">
         <span><a href="#" class="website-title">Visualizing Flu Epidemic</a></span>
         <div class="jump-links">
-           	<div class="link"><a href="#">Home</a></div>
-          	<div class="link"><a href="#introduction">Introduction</a></div>
-          	<div class="link"><a href="#geographic">Pattern</a></div>
-         	<div class="link"><a href="#hospitalization">Hospitalization</a></div>
+        	<div class="dropdown link">
+    			<button class="dropbtn">References 
+      				<i class="fa fa-caret-down"></i>
+    			</button>
+    			<div class="dropdown-content">
+      				<a href="https://www.vox.com/2018/1/12/16882622/flu-season-epidemic-prevention-vaccine" target="_blank">Vox Article</a>
+      				<a href="https://www.cdc.gov/flu/about/season/flu-season-2017-2018.htm" target="_blank">CDC Season '18</a>
+      				<a href="https://www.cdc.gov/media/releases/2018/t0112-widespread-flu-activity.html" target="_blank">CDC Flu Activity</a>
+    			</div>
+  			</div>
+  			<div class="dropdown link">
+    			<button class="dropbtn">Datasets 
+      				<i class="fa fa-caret-down"></i>
+    			</button>
+    			<div class="dropdown-content">
+      				<a href="https://gis.cdc.gov/grasp/fluview/fluportaldashboard.html" target="_blank">Spread Data</a>
+      				<a href="https://gis.cdc.gov/grasp/fluview/FluHospChars.html" target="_blank">Type Data</a>
+    			</div>
+  			</div>  
         </div>
       </div>
     </header>
