added front and back slides and made minor styling changes

--- a/index.html
+++ b/index.html
@@ -36,15 +36,21 @@
 		<div class="reveal">		
 			<div class="slides">
 				
+				<section id="front">
+					<h1>Understanding the 2017-18 Flu Epidemic</h1>
+					<div><strong>Team Members:</strong></div>
+					<div>Andrew Mamroth, Shan He</div>
+					<div>Stanley Opara, Yubo Zhang</div>
+				</section>
+
 				<section id="introduction">
   		 		  <div class="container">
 				  <div class="row">
 				    <div class="col-sm-4">
-				    	<h1>Introduction</h1>
- 				      <p>In the year of 2017-2018, nearly 12,000 people have been hospitalized with confirmed cases of flu, an increase of 3,000 in just one week, according to the Centers for Disease Control and Prevention (CDC). If you're not sick, there's a good chance some of your friends, family members, or colleagues are.
-  				      </p>
-  				      <p> CDC monitors certain key flu indicators (for example, outpatient visits of influenza-like illness (ILI), the results of laboratory testing and reports of flu hospitalizations and deaths). This season, ILI went above baseline in late November and remained elevated through February 2018. 
-  				      </p>
+				    	<p>In the year of 2017-2018, nearly 12,000 people have been hospitalized with confirmed cases of flu, an increase of 3,000 in just one week, according to the Centers for Disease Control and Prevention (CDC). If you're not sick, there's a good chance some of your friends, family members, or colleagues are.
+  				      	</p>
+  				      	<p> CDC monitors certain key flu indicators (for example, outpatient visits of influenza-like illness (ILI), the results of laboratory testing and reports of flu hospitalizations and deaths). This season, ILI went above baseline in late November and remained elevated through February 2018. 
+  				     	</p>
 				    </div>
 				    <div class="col-sm-8">
 				    <iframe src="https://public.tableau.com/views/Slide_1a/Slide1?:showVizHome=no&:embed=true&:toolbar=no"
@@ -137,7 +143,10 @@
 					</div>
 				</section>
 
-				
+				<section id="back">
+					<h1>Thank you!</h1>
+				</section>
+
 			</div>
 		</div>
 		<script src="js/reveal.js"></script>
